--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <input type="text" id="city" name="city-field">
                     <label for="state">State</label>
                     <select id="state" name="select-state">
+                                <option value="Choose">Choose State</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
                                 <option value="AZ">Arizona</option>
@@ -92,7 +93,7 @@
                                 <option value="WY">Wyoming</option>
                             </select>				                         
                     <label for="zip-code">Zip Code</label>
-                    <input type="text" id="zip-code" name="zip"> 
+                    <input required type="text" id="zip-code" name="zip" placeholder="Required"> 
                 
                 </fieldset>
 
