--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
                         <p>Newsletter Format</p>
                         <div>
-                            <input type="radio" id="html" name="html-format">
+                            <input type="radio" id="html" name="format">
                             <label for="html">HTML</label>
                         </div>
                         <div>
-                            <input type="radio" id="plain-text" name="plain-format">
+                            <input type="radio" id="plain-text" name="format">
                             <label for="plain-text">Plain Text</label>
                         </div>
                         
