ready for review

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -147,11 +147,10 @@
                         <button type="submit">Sign Up</button>
                 </fieldset>
             </form>
+        </div>
 
             <footer>
                 <p>Copyright The Code Review</p>
             </footer>
-
-        </div>
     </body>
 </html>
