quick input fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div>
                         <label for="email-address">Email Address</label>
-                        <input required type="text" id="email-address" name="mail" placeholder="Required">
+                        <input required type="email" id="email-address" name="mail" placeholder="Required">
                     </div>
                     <div>
                         <label for="phone-number">Phone Number</label>
